# French-English-Neural-Machine-Translation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.py
data/: back_translate.py  dataset.py  download.py  preprocess.py  tokenizer.py
evaluation/: evaluate.py
inference/: beam_search.py  translate.py
model/: attention.py  embeddings.py  layers.py  modern.py  transformer.py
scripts/: demo.py  plot_training.py  train.py  train_tokenizer.py
tests/: test_model.py
training/: loss.py  optimizer.py  trainer.py
utils/: device.py
